RESOLVED FIXED185979
REGRESSION: Assertion failure compiling 1Blocker
https://bugs.webkit.org/show_bug.cgi?id=185979
Summary REGRESSION: Assertion failure compiling 1Blocker
Tadeu Zagallo
Reported 2018-05-25 02:40:57 PDT
ToT debug builds are crashing when compiling 1Blocker due to an assertion failure in DFANode::setActions.
Attachments
Patch (5.37 KB, patch)
2018-05-27 15:04 PDT, Tadeu Zagallo
no flags
Patch (5.28 KB, patch)
2018-05-28 01:33 PDT, Tadeu Zagallo
no flags
Tadeu Zagallo
Comment 1 2018-05-25 02:41:49 PDT
Tadeu Zagallo
Comment 2 2018-05-27 15:04:04 PDT
Daniel Bates
Comment 3 2018-05-27 20:41:57 PDT
Comment on attachment 341430 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=341430&action=review > LayoutTests/http/tests/contentextensions/root-actions-expected.txt:2 > +layer at (0,0) size 800x600 I do not see the need for this test to dump the render tree. It seems sufficient to make this a text-only trust. See my remark below on how to achieve this. > LayoutTests/http/tests/contentextensions/root-actions.html:1 > +<body> Unless it is necessary to use quirks mode for this test please add <!DOCTYPE html> at the top of this file and make this a well defined HTML document with <html> and </html>. Please make this a text-only test as opposed to a render tree dump. You can do this by adding the following markup to the <head> or <body>: <script> if (window.testRunner) testRunner.dumpAsText(); </script>
Tadeu Zagallo
Comment 4 2018-05-28 01:33:47 PDT
Geoffrey Garen
Comment 5 2018-05-29 10:43:47 PDT
Comment on attachment 341449 [details] Patch r=me
Geoffrey Garen
Comment 6 2018-05-29 10:44:14 PDT
Comment on attachment 341449 [details] Patch cq+
WebKit Commit Bot
Comment 7 2018-05-29 11:10:56 PDT
Comment on attachment 341449 [details] Patch Clearing flags on attachment: 341449 Committed r232265: <https://trac.webkit.org/changeset/232265>
WebKit Commit Bot
Comment 8 2018-05-29 11:10:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.